# kaiju-toolset

./: .gitignore  Cargo.toml  Makefile.toml  README.md
cpp/TestToolset/: TestToolset.cpp  TestToolset.sln  TestToolset.vcxproj  pch.h
demo-emulator/: .gitignore  Cargo.toml  readme.md
demo-emulator/res/: assembly.kjb  cartridge.cart  characters_map.txt  descriptor.kjo  game.kj  readme.md  text.kj
demo-emulator/res/std/: text_mode.kj
demo-emulator/scripts/: run.bat  run.sh
demo-emulator/src/cartridge/: main.rs
demo-emulator/src/console/: cartridge.rs  main.rs  processor.rs  render.rs
demo-emulator/src/fontgen/: main.rs
dotnet/: Kaiju.NET.sln
dotnet/Kaiju.Compiler.NET/: API.cs  Kaiju.Compiler.NET.csproj  NAPI.cs
dotnet/Kaiju.VirtualMachine.NET/: API.cs  NAPI.cs
dotnet/Tests/: Program.cs  Tests.csproj
dotnet/Tests/Properties/: AssemblyInfo.cs
dotnet/Tests/res/: descriptor.kjo  program.kj
kaiju-compiler-capi/: Cargo.toml  cbindgen.toml
kaiju-compiler-capi/src/: fm_module_reader.rs  lib.rs
kaiju-compiler-cli/: Cargo.toml  README.md
kaiju-compiler-cli-core/: Cargo.toml  README.md
kaiju-compiler-cli-core/src/: external_deep_validator.rs  fs_module_reader.rs  lib.rs
kaiju-compiler-cli/src/: main.rs
kaiju-compiler-core/: Cargo.toml  README.md
kaiju-compiler-core/src/: lib.rs  module_reader.rs
kaiju-core/: Cargo.toml  README.md
kaiju-core/src/: assembly.rs  ast.rs  error.rs  lib.rs  parser.rs  program.rs  utils.rs  validator.rs  vm.rs
kaiju-core/src/grammars/: kaiju.pest
kaiju-vm-capi/: Cargo.toml  cbindgen.toml
kaiju-vm-capi/src/: lib.rs
kaiju-vm-cli/: Cargo.toml  README.md
kaiju-vm-cli/src/: external_processor.rs  main.rs
kaiju-vm-core/: Cargo.toml  README.md
kaiju-vm-core/src/: lib.rs  processor.rs  state.rs  vm.rs
unity/Kaiju.Unity/Assets/Kaiju/Example/: Chessbox.mat  ExampleScene.unity  GoalController.cs  Obstacle.mat  Player.mat  PlayerController.cs  Target.mat  program.txt
unity/Kaiju.Unity/ProjectSettings/: ProjectSettings.asset
