[workspace]
members = [
  "kaiju-core",
  "kaiju-compiler-core",
  "kaiju-compiler-cli-core",
  "kaiju-compiler-cli",
  "kaiju-vm-core",
  "kaiju-vm-cli",
  "kaiju-compiler-capi",
  "kaiju-vm-capi",
  "demo-emulator",
]
exclude = [
  "cpp",
  "demo",
  "demo-emulator",
  "dotnet",
  "toolset",
  "unity",
]
