[package]
name = "kaiju-compiler-core"
version = "0.1.2"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com> (https://psichix.io)"]
edition = "2018"
description = "Compiler core module of modern assembly language toolset"
repository = "https://github.com/PsichiX/kaiju-toolset"
readme = "README.md"
keywords = ["assembly", "language", "toolset", "script", "virtual-machine"]
categories = ["parser-implementations", "emulators"]
license = "MIT"
documentation = "https://docs.rs/kaiju-compiler-core"

[dependencies]
kaiju-core = { version = "0.1", path = "../kaiju-core" }
