[package]
name = "kaiju-core"
version = "0.1.4"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com> (https://psichix.io)"]
edition = "2018"
description = "Core module of modern assembly language toolset"
repository = "https://github.com/PsichiX/kaiju-toolset"
readme = "README.md"
keywords = ["assembly", "language", "toolset", "script", "virtual-machine"]
categories = ["parser-implementations", "emulators"]
license = "MIT"
documentation = "https://docs.rs/kaiju-core"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
byteorder = "1"
