[package]
name = "kaiju-vm-core"
version = "0.1.4"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com> (https://psichix.io)"]
edition = "2018"
description = "Virtual machine core module of modern assembly language toolset"
repository = "https://github.com/PsichiX/kaiju-toolset"
readme = "README.md"
keywords = ["assembly", "language", "toolset", "script", "virtual-machine"]
categories = ["parser-implementations", "emulators"]
license = "MIT"
documentation = "https://docs.rs/kaiju-vm-core"

[dependencies]
kaiju-core = { version = "0.1", path = "../kaiju-core" }
kaiju-compiler-core = { version = "0.1", path = "../kaiju-compiler-core" }
itertools = "0.7"
byteorder = "1"
